<resources>
    <string name="app_name">Kollektivet</string>
    <string name="action_settings">Settings</string>

    <!--Error dialog for when network is not active on startup -->
    <string name="require_network_on_startup">Internett tilgang er nødvendig ved oppstart</string>

    <!-- Loading Screen-->
    <string name="restart_app">Klarte ikke koble til server. Slå på internett tilgang.</string>
    <string name="restart_app_server">Noe gikk galt, klarte ikke koble til server.</string>

    <!-- Login Screen-->
    <string name="email_autofill">example@mail.com</string>
    <string name="password_fill">******</string>
    <string name="login">Logg inn</string>
    <string name="register">Registrer</string>
    <string name="forgot_password">Glemt Passord</string>

    <!-- Reset Password Screen-->
    <string name="reset_password">Tilbakestill passord</string>
    <string name="continue_reset">Fortsett</string>
    <string name="cancel_reset">Avbryt</string>

    <!-- Reset Password Code Screen-->
    <string name="reset_code">Tilbakestill kode</string>
    <string name="code">Kode</string>
    <string name="new_password">Nytt passord</string>

    <!-- Register flat screen -->
    <string name="register_flat">Ny husstand</string>

    <!-- Register Screen-->
    <string name="username">Brukernavn:</string>
    <string name="password">Passord:</string>
    <string name="re_password">Gjenta passord:</string>
    <string name="email">Email:</string>
    <string name="name_autotfill">Ola Nordmann</string>
    <string name="invalid_username">Brukernavn er ugyldig. Det kan kun inneholde bokstaver, tall, underscores og bindestreker</string>
    <string name="invalid_email">Email er ugyldig</string>
    <string name="invalid_password">Passord er ugyldig. Det må inneholde minst ett tall, èn liten bokstav, èn stor bokstav og være minst 6 tegn langt</string>
    <string name="invalid_repassword">Passord og gjentatt passord er ulikt</string>

    <!-- Score Screen-->
    <string name="score_title">Poeng</string>
    <string name="last_winner">Vinner av forrige periode: </string>
    <string name="prize_this_period">Premie for denne perioden:</string>

    <!-- Task Screen-->
    <string name="task_title">Oppgaver</string>
    <string name="suggested_tasks_title">Nye forslag:</string>
    <string name="edit_task_title">Endre oppgave</string>
    <string name="accepted_tasks_title">Godkjente oppgaver:</string>
    <string name="approve">Godkjenn</string>
    <string name="disapprove">Avslå</string>
    <string name="yes">Ja</string>
    <string name="no">Nei</string>
    <string name="are_you_sure">Er du sikker på at du vil gjøre oppgave: </string>
    <string name="are_you_sure_delete">Er du sikker på at du vil slette oppgave: </string>
    <string name="delete">Fjern</string>
    <string name="edit">Endre</string>
    <string name="all_fields_filled">Alle felt må være fylt ut</string>
    <string name="do_task">Gjør oppgave</string>
    <string name="history">Historie</string>
    <string name="submit">Send</string>
    <string name="description">Beskrivelse</string>
    <string name="number_of_points">Antall poeng</string>
    <string name="back">Tilbake</string>
    <string name="history_dialog_title">Oppgave historie</string>
    <string name="suggest_new_task">Foreslå ny oppgave</string>
    <string name="new_task">Opprett ny</string>
    <string name="score">Poeng: </string>

    <!-- History Screen-->
    <string name="history_title">Historie</string>
    <string name="this_period">Denne perioden</string>
    <string name="last_period">Forrige periode</string>
    <string name="earlier">Tidligere</string>
    <string name="show_person">Velg person:</string>
    <string name="show_task">Velg oppgave:</string>
    <string name="all">Alle</string>

    <!-- Settings Screen-->
    <string name="setting_title">Innstillinger</string>
    <string name="flatName_hint">Navn</string>
    <string name="period_length">Lengde på periode:</string>
    <string name="period_prize">Premie:</string>
    <string name="prize_hint">Premie</string>
    <string name="save_settingsBtn">Lagre</string>
    <string name="flatName_text">Navn:</string>
    <string name="flatPIN_text">PIN-kode:</string>
    <string name="logout">Logg ut</string>
    <string name="are_you_sure_logout">Er du sikker på at du vil logge ut?</string>
    <string name="changed_period">Du har valgt en ny periode enn tidligere. Dette vil føre til at alle tidligere opptjente poeng i denne perioden vil bli nullstilt samtidig som ny periodestart vil bli satt
    til idag. Vil du fullføre?</string>

    <!-- Find flat screen-->
    <string name="find_new_flat">Finn nytt kollektiv</string>
    <string name="find_flat">Bli med</string>
    <string name="create_flat">Opprett nytt</string>
    <string name="flat_pin">PIN-kode</string>

    <!-- Push notification-->
    <string name="push_title">Perioden over</string>
    <string name="push_text">Perioden er nå over, gå til poengmenyen og se hvem som vant!</string>
    <string name="ok">Ok</string>

    <!--Profile strings-->
    <string name="isLoggedInn">isLoggedInn</string>
    <string name="isInFlat">isInFlat</string>
    <string name="flatPIN">flatPIN</string>

    <!--PUBLIC FINAL STRINGS-->
    <!--Consider making these strings unreadable-->
    <string name="profile_preferences">UserPrefsFile</string>
    <string name="userInfo">userInfo</string>

    <!--Flatmates View -->
    <string name="display_rights_admin">Adminmodus</string>
    <string name="display_rights_user">Brukermodus</string>
    <string name="see_flatmates">Se flatmates</string>
    <string name="are_you_sure_leave">Er du sikker på at du vil forlate?</string>
    <string name="are_you_sure_kick">Er du sikker på at du vil fjerne denne personen fra kollektivet?</string>
    <string name="are_you_sure_promote1">Er du sikker på at du vil oppgradere </string>
    <string name="are_you_sure_promote2">til admin, og dermed nedgradere deg selv?</string>
    <string name="you_have_to_promote">Du må forfremme noen andre til admin før du kan forlate kollektivet</string>
    <string name="flatMates_title">Samboere</string>
    <string name="go_back">Gå tilbake</string>

</resources>
