<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg">

    <!--<include-->
        <!--android:id="@+id/tool_bar"-->
        <!--layout="@layout/toolbar"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_width="match_parent"-->
        <!--/>-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/setting_title"
        android:id="@+id/SettingsInformation"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="73dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="540px"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:id="@+id/flatName_header"
        android:text="@string/flatName_text"
        android:textColor="@color/white"
        android:textSize="16sp"
        />

    <EditText
        android:layout_width="540px"
        android:layout_height="100px"
        android:layout_gravity="center"
        android:paddingLeft="20px"
        android:background="@drawable/input_stroke"
        android:id="@+id/flatName"
        android:hint="@string/flatName_hint"/>

    <TextView
        android:layout_width="540px"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/period_lengthTxt"
        android:text="@string/period_length"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        />

    <Spinner
        android:layout_width="540px "
        android:layout_height="100px"
        android:layout_gravity="center"
        android:popupBackground="@drawable/gradient_bg"
        android:id="@+id/periodSpinner" />

    <TextView
        android:layout_width="540px"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/period_prizeTxt"
        android:text="@string/period_prize"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        />

    <EditText
        android:layout_width="540px"
        android:layout_height="100px"
        android:layout_gravity="center"
        android:paddingLeft="20px"
        android:background="@drawable/input_stroke"
        android:id="@+id/period_prize"
        android:hint="@string/prize_hint"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save_settingsBtn"
        android:id="@+id/save_button"
        android:onClick="save_settings"
        android:layout_marginTop="20dp"
        android:background="@drawable/gradient_btn"
        android:textColor="#FFFFFF" />


</LinearLayout>