<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradient_bg">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/find_new_flat"
        android:id="@+id/textView"
        android:layout_marginTop="158dp"
        android:textColor="#FFFFFF"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="400px"
        android:layout_height="80px"
        android:id="@+id/flatPin_edittext"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF"
        android:hint="@string/flat_pin"
        android:layout_marginTop="20dp"
        android:textAlignment="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_flat"
        android:id="@+id/find_button"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/flatPin_edittext"
        android:layout_centerHorizontal="true"
        android:background="@drawable/gradient_btn"
        android:textColor="#FFFFFF" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_flat"
        android:id="@+id/createNew_button"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/find_button"
        android:layout_centerHorizontal="true"
        android:background="@drawable/gradient_btn"
        android:textColor="#FFFFFF"
        android:paddingRight="20dp"
        android:paddingLeft="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20px"
        android:layout_marginTop="20dp"
        android:layout_below="@id/createNew_button"
        android:layout_centerHorizontal="true"
        android:background="@drawable/gradient_btn"
        android:textColor="@color/white"
        android:text="@string/logout"
        android:onClick="logoutFromFindFlat"
        />
</RelativeLayout>