<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_background"
    tools:context=".implementation.view.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/register"
        android:id="@+id/RegisterInformation"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="73dp"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="440px"
        android:layout_height="80px"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_centerVertical="true"
        android:paddingLeft="20px"
        android:layout_alignParentRight="true"
        android:background="@drawable/input_stroke"
        android:layout_below="@id/RegisterInformation"
        android:layout_marginRight="20px"
        android:inputType="textPersonName"
        android:id="@+id/name_register"
        android:hint="@string/name_autotfill"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:text="@string/username"
            android:id="@+id/nametxt"
            android:layout_alignBaseline="@id/name_register"
            android:layout_marginLeft="20px"
            />

    <EditText
        android:layout_width="440px"
        android:layout_height="80px"
        android:layout_gravity="center"
        android:background="@drawable/input_stroke"
        android:layout_below="@id/name_register"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:paddingLeft="20px"
        android:layout_marginRight="20px"
        android:layout_marginTop="30px"
        android:inputType="textEmailAddress"
        android:id="@+id/email_register"
        android:hint="@string/email_autofill"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:text="@string/email"
            android:id="@+id/emailtxt"
            android:layout_alignBaseline="@id/email_register"
            android:layout_marginLeft="20px"
            />


    <EditText
        android:id="@+id/password_register"
        android:layout_width="440px"
        android:layout_gravity="center"
        android:background="@drawable/input_stroke"
        android:layout_height="80px"
        android:layout_below="@id/email_register"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:paddingLeft="20px"
        android:layout_marginTop="30px"
        android:layout_marginRight="20px"
        android:inputType="textPassword"
        android:hint="@string/password_fill"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:text="@string/password"
            android:id="@+id/passwordtxt"
            android:layout_alignBaseline="@id/password_register"
            android:layout_marginLeft="20px"
             />

    <EditText
        android:id="@+id/re_password_register"
        android:layout_width="440px"
        android:layout_gravity="center"
        android:background="@drawable/input_stroke"
        android:layout_height="80px"
        android:layout_below="@id/password_register"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:paddingLeft="20px"
        android:layout_marginTop="30px"
        android:layout_marginRight="20px"
        android:inputType="textPassword"
        android:hint="@string/password_fill"/>

    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:layout_height="wrap_content"
        android:text="@string/re_password"
        android:id="@+id/re_passwordtxt"
        android:layout_alignBaseline="@id/re_password_register"
        android:layout_marginLeft="20px"
        />




    <Button
        android:layout_width="440px"
        android:layout_height="80px"
        android:layout_gravity="center"
        android:id="@+id/loginbtn"
        android:background="@drawable/btn_normal"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textAlignment="center"
        android:layout_marginTop="50px"
        android:layout_below="@id/re_password_register"
        android:layout_centerHorizontal="true"
        android:onClick="tryRegister"
        android:text="@string/register"/>



</RelativeLayout>