<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradient_bg">


    <EditText
        android:layout_width="540px"
        android:layout_height="90px"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40px"
        android:layout_marginLeft="40px"
        android:paddingLeft="20px"
        android:background="#ffffff"
        android:maxLength="15"
        android:inputType="textPersonName"
        android:id="@+id/description_edittext"
        android:hint="@string/description"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="540px"
        android:layout_height="90px"
        android:layout_gravity="center"
        android:paddingLeft="20px"
        android:background="#ffffff"
        android:inputType="number"
        android:id="@+id/points_edittext"
        android:hint="@string/number_of_points"
        android:maxLength="10"
        android:layout_below="@+id/description_edittext"
        android:layout_alignLeft="@+id/description_edittext"
        android:layout_alignStart="@+id/description_edittext"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="540px"
        style="?android:attr/buttonStyleSmall"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        android:id="@+id/submit_btn"
        android:background="@drawable/gradient_btn"
        android:layout_below="@+id/points_edittext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40px"
        android:layout_marginLeft="40px"/>
         />

    <Button
        android:layout_width="540px"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/cancelBtn_newTask"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:background="@drawable/gradient_btn"
        android:layout_marginTop="20px"
        android:layout_marginBottom="10px"
        android:layout_below="@id/submit_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/cancel_reset"/>


</RelativeLayout>