<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".implementation.view.LoginActivity">

    <!--<include-->
        <!--android:id="@+id/tool_bar"-->
        <!--layout="@layout/toolbar"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_width="match_parent"-->
        <!--/>-->


    <EditText
        android:layout_width="540px"
        android:layout_height="100px"
        android:layout_gravity="center"
        android:layout_marginRight="40px"
        android:layout_marginLeft="40px"
        android:layout_marginTop="50dp"
        android:paddingLeft="20px"
        android:background="@drawable/input_stroke"
        android:id="@+id/email_reset"
        android:hint="@string/email_autofill"/>


    <Button
        android:layout_width="540px"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/continueBtn"
        android:background="@drawable/gradient_btn"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:layout_marginTop="20px"
        android:layout_marginRight="40px"
        android:layout_marginLeft="40px"
        android:text="@string/continue_reset"/>

    <Button
        android:layout_width="540px"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/cancelBtn"
        android:background="@drawable/gradient_btn"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:layout_marginTop="20px"
        android:layout_marginRight="40px"
        android:layout_marginLeft="40px"
        android:layout_marginBottom="40px"
        android:text="@string/cancel_reset"/>

</LinearLayout>