<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/score_title"
        android:textSize="30dp"
        android:id="@+id/scoreTitle"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:paddingTop="20dp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_flatmates"
        android:onClick="goToFlatmatesView"
        android:id="@+id/seeFlatmates"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="-40dp"
        android:layout_marginBottom="0dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/flatName_score"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:paddingTop="20dp"
        />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="500px"
        android:layout_marginTop="20px"
        android:id="@+id/listView_scores" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/prize_this_period"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:paddingTop="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/prize_this_period"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:paddingTop="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/last_winner"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:paddingTop="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/last_winner_person"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:paddingTop="20dp"
        />

</LinearLayout>