<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<include-->
        <!--android:id="@+id/tool_bar"-->
        <!--layout="@layout/toolbar"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_width="match_parent"-->
        <!--/>-->


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/task_title"
        android:id="@+id/LoginInformation"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:gravity="center" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_tasks_btn"
            android:background="@drawable/edit_tasks"
            android:src="@drawable/btn_highlight"
            android:layout_alignBaseline="@id/LoginInformation"
            android:layout_marginLeft="10px"
            />


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/new_task_btn"
            android:background="@drawable/edit_tasks"
            android:layout_alignBaseline="@id/LoginInformation"
            android:src="@drawable/btn_highlight"
            android:onClick="suggestNewTask"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10px"
            />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/suggested_tasks_title"
        android:layout_below="@id/LoginInformation"
        android:textSize="20dp"
        android:layout_marginTop="110px"
        android:layout_marginLeft="20px"
        android:textColor="@color/white"
        android:text="@string/suggested_tasks_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />


    <ListView
        android:id="@+id/suggested_task_list"
        android:layout_width="match_parent"
        android:layout_below="@id/suggested_tasks_title"
        android:layout_marginTop="20px"
        android:layout_height="350px"
        android:background="@drawable/list_ui"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/accepted_tasks_title"
        android:layout_below="@id/suggested_task_list"
        android:textSize="20dp"
        android:layout_marginTop="20px"
        android:layout_marginLeft="20px"
        android:textColor="@color/white"
        android:text="@string/accepted_tasks_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <ListView
        android:id="@+id/accepted_task_list"
        android:layout_width="match_parent"
        android:layout_marginTop="20px"
        android:layout_below="@id/accepted_tasks_title"
        android:layout_height="450px"
        android:background="@drawable/list_ui"/>



</RelativeLayout>